crearea banka  repository service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8084
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/bank-demo
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=1724
 
 ##JPA Config
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
